fix: confirm dialog z-index fix
Close #366

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,3 +14,8 @@
     max-height: 90%;
   }
 }
+
+:host ::ng-deep p-confirmdialog {
+  z-index: 20000000 !important;
+  position: relative;
+}
